--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,15 @@ on:
     tags:
       - 'v*'
   workflow_dispatch:
+    inputs:
+      version:
+        description: 'Release version (e.g., v1.0.0)'
+        required: true
+        default: 'v0.1.0'
+      prerelease:
+        description: 'Mark as pre-release'
+        type: boolean
+        default: true
 
 permissions:
   contents: write
@@ -138,7 +147,6 @@ jobs:
   release:
     needs: build
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/')
 
     steps:
       - name: Download all artifacts
@@ -147,6 +155,9 @@ jobs:
       - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
+          tag_name: ${{ github.event.inputs.version || github.ref_name }}
+          name: Viover ${{ github.event.inputs.version || github.ref_name }}
+          prerelease: ${{ github.event.inputs.prerelease || false }}
           files: |
             viover-macos/*.dmg
             viover-windows/*.zip
